--- a/src/Componan/contact/Contact.css
+++ b/src/Componan/contact/Contact.css
@@ -2,6 +2,7 @@
   margin-left: 150px;
   margin-right: 150px;
   margin-top: 5px;
+   
     max-width: 90%;
     display: flex;
     align-items: center;
@@ -10,6 +11,11 @@
     border-radius: 15px;
     padding: 15px;
 
+}
+.contact:hover{
+    background-color: rgb(237, 178, 178);
+    transform:scale(1.02);
+    transition: 0.5s;
 }
 .contact_col{
     flex-basis: 48%;
@@ -34,6 +40,7 @@
     margin: 20px 0;
     list-style: none;
 }
+ 
  
 .contact form input, .contact form textarea{
     display: block;
@@ -64,9 +71,9 @@
         padding: 18px;
     }
 }
-@media (max-width: 350px) {
+@media (max-width: 400px) {
     .contact{
-        margin-left: 0;
+        margin-left: 20px;
         margin-right: 0;
          display: flex;
          flex-direction: column;
