--- a/src/Componan/footer/Footer.css
+++ b/src/Componan/footer/Footer.css
@@ -1,10 +1,17 @@
+footer{
+    position:relative;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
 .footer{
     /* margin: 10px auto; */
-    display: flex;
+    display:flex;
     align-items: center;
     justify-content: space-between;
     border-top: 1px solid #797979;
     padding: 3px 0;
+  
 }
 .footer ul li{
     list-style: none;
