--- a/src/Componan/navbar/Navbar.css
+++ b/src/Componan/navbar/Navbar.css
@@ -1,5 +1,6 @@
 nav{
     width: 100%;
+    height: 70px;
     color: #fff;
     padding: 4px 0;
     position: fixed;
@@ -9,7 +10,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     z-index: 10;
-    padding-left: 100px;
+    padding-left: 70px;
     padding-right: 100px;
     cursor: pointer;
     /* background: rgba(24, 24, 184, 0.518); */
@@ -22,9 +23,26 @@ nav{
   nav ul li{
     display: flex;
     text-align: center;
-    margin: 3px 10px;
-    font-size: 18px;
+    margin: 3px 5px;
+    font-size: 23px;
     font-weight: 600;
+    width:120px;
+    height: 40px;
+   
+  }
+  nav ul li:last-child{
+    height: 30px;
+  }
+  nav ul li:hover{
+    border-bottom: 5px solid red;
+    transition: all 0.2s ease-in-out;
+  
+    color: rgb(242, 141, 141);
+    
+  }
+  nav ul li:hover:last-child{
+    border: none;
+    color: black;
   }
   #ul{
     display: flex;
