chenge about bg color

--- a/src/Componan/About/About.css
+++ b/src/Componan/About/About.css
@@ -4,6 +4,9 @@
     align-items: center;
     justify-content: space-between;
     width: 90%;
+    background-color: rgb(90, 162, 244);
+     
+    border-radius: 15px;
 }
 .about_left{
     flex-basis: 40%;
